<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/linearLayout11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FF406C"
                android:orientation="horizontal"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/ic_back"
                    app:tint="@color/white"
                    android:contentDescription="@string/image" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/add_new_address"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>


            <TextView
                android:id="@+id/access"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="start"
                android:text="@string/full_name"
                android:textColor="@color/grey"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout11" />

            <EditText
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_curve"
                android:fontFamily="@font/poppins_medium"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:hint="@string/enter_your_name"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/access"
                app:layout_constraintStart_toStartOf="@+id/access"
                app:layout_constraintTop_toBottomOf="@+id/access"
                android:autofillHints="" />

            <TextView
                android:id="@+id/house_topic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="start"
                android:text="@string/house_no_building_name_required"
                android:textColor="@color/grey"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/name"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/layout_state" />


            <EditText
                android:id="@+id/house_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_curve"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/enter_your_house_no"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/name"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/house_topic"
                android:autofillHints=""
                android:inputType="textMultiLine" />


            <TextView
                android:id="@+id/phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="start"
                android:text="@string/pincode_required"
                android:textColor="@color/grey"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/email_add"
                app:layout_constraintStart_toStartOf="@+id/email_add"
                app:layout_constraintTop_toBottomOf="@+id/email_add" />

            <LinearLayout
                android:id="@+id/linearLayout13"
                android:layout_width="0dp"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/email_add"
                app:layout_constraintStart_toStartOf="@+id/email_add"
                app:layout_constraintTop_toBottomOf="@+id/phone">


                <EditText
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_curve"
                    android:fontFamily="@font/poppins_medium"
                    android:inputType="number"
                    android:maxLength="6"
                    android:padding="10dp"
                    android:hint="@string/pincode"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    tools:ignore="TextFields"
                    android:autofillHints="" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginBottom="5dp"
                    android:paddingTop="5dp"
                    android:background="@drawable/bg_blue_curve"
                    android:backgroundTint="@color/myntra_red"
                    android:orientation="horizontal"
                    android:padding="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/ic_pointer_location"
                        app:tint="@color/white"
                        android:contentDescription="@string/image" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="5dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/use_my_location"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/layout_state"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@+id/linearLayout13"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout13"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="start"
                        android:text="@string/state_required"
                        android:textColor="@color/grey"
                        android:textSize="12sp" />

                    <EditText
                        android:id="@+id/state_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_curve"
                        android:fontFamily="@font/poppins_medium"
                        android:hint="@string/enter_your_state"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        app:layout_constraintStart_toStartOf="@+id/name"
                        app:layout_constraintTop_toBottomOf="@+id/state"
                        android:autofillHints=""
                        android:inputType="text" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="start"
                        android:text="@string/city_required"
                        android:textColor="@color/grey"
                        android:textSize="12sp"
                        app:layout_constraintEnd_toEndOf="@+id/linearLayout13"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout13" />

                    <EditText
                        android:id="@+id/city_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/bg_curve"
                        android:fontFamily="@font/poppins_medium"
                        android:hint="@string/enter_your_city"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        app:layout_constraintEnd_toEndOf="@+id/linearLayout13"
                        app:layout_constraintTop_toBottomOf="@+id/state"
                        android:autofillHints=""
                        android:inputType="text" />


                </LinearLayout>

            </LinearLayout>


            <TextView
                android:id="@+id/house"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="start"
                android:text="@string/phone_number"
                android:textColor="@color/grey"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/name"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <EditText
                android:id="@+id/email_add"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_curve"
                android:fontFamily="@font/poppins_medium"
                android:inputType="number"
                android:padding="10dp"
                android:hint="@string/enter_your_phone_number"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/house"
                app:layout_constraintStart_toStartOf="@+id/house"
                app:layout_constraintTop_toBottomOf="@+id/house"
                tools:ignore="TextFields"
                android:autofillHints="" />


            <TextView
                android:id="@+id/road_topic"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="start"
                android:text="@string/road_required"
                android:textColor="@color/grey"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@+id/name"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/house_name" />

            <EditText
                android:id="@+id/road"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_curve"
                android:fontFamily="@font/poppins_medium"
                android:hint="@string/enter_nearby_landmarks_road_name"
                android:inputType="textPersonName"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/road_topic"
                app:layout_constraintStart_toStartOf="@+id/road_topic"
                app:layout_constraintTop_toBottomOf="@+id/road_topic"
                android:autofillHints=""
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <TextView
        android:id="@+id/save"
        android:layout_width="0dp"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/bg_curve"
        android:backgroundTint="#FF406C"
        android:clickable="true"
        android:padding="15dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/save_address"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:focusable="true" />


</androidx.constraintlayout.widget.ConstraintLayout>